force-app/main/default/objects/Requirement_Field_Validation_Rule__mdt/Requirement_Field_Validation_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Defines reusable validation rules for Requirement_Field__c records.</description>
    <label>Requirement Field Validation Rule</label>
    <pluralLabel>Requirement Field Validation Rules</pluralLabel>
</CustomObject>