force-app/main/default/objects/Requirement_Field_Validation_Rule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <required>true</required>
    <type>Checkbox</type>
</CustomField>