force-app/main/default/objects/Requirement_Field_Validation_Rule__mdt/fields/Validation_Expression__c.field-meta.xml
<CustomField>
    <fullName>Validation_Expression__c</fullName>
    <label>Validation Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>